--- a/e10.html
+++ b/e10.html
@@ -89,6 +89,11 @@
     <img src="output/i9(6).png" alt="Output of ex9">
 
   </div>
-
+<div class="program">
+    <h2>Program 5 - ex10</h2>
+    <img src="output/img1.png" alt="Output of ex10">
+    <img src="output/img2.png" alt="Output of ex10">
+    <img src="output/img3.png" alt="Output of ex10">
+ </div>   
 </body>
 </html>
